fix path and baseurl

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@ title: Bhagavad Gita
 page.url | remove_first: '/' | remove_first: lang | prepend: '/' %}
 
 <p>
-  <strong>Language:</strong> {% unless lang == 'en' %}<a href="/en">English</a
-  >{% else %}English{% endunless %} | {% unless lang == 'hi' %}<a href="/hi"
-    >हिंदी</a
-  >{% else %}हिंदी{% endunless %} | {% unless lang == 'sa' %}<a href="/sa"
-    >संस्कृत</a
-  >{% else %}संस्कृत{% endunless %}
+  <strong>Language:</strong>
+  {% unless lang == 'en' %}
+  <a href="{{ site.baseurl }}/en">English</a>
+  {% else %} English {% endunless %} | {% unless lang == 'hi' %}
+  <a href="{{ site.baseurl }}/hi">हिंदी</a>
+  {% else %} हिंदी {% endunless %} | {% unless lang == 'sa' %}
+  <a href="{{ site.baseurl }}/sa">संस्कृत</a>
+  {% else %} संस्कृत {% endunless %}
 </p>
 
 <!-- Chapters -->
